noinst_LIBRARIES = libwdsp.a

libwdsp_a_CFLAGS = -g -O3 -Wall -fPIC -ffast-math -Wno-unused-function -lfftw3 -lpthread @SIMD_FLAGS@

libwdsp_a_SOURCES = \
amd.c \
ammod.c \
amsq.c \
analyzer.c \
anf.c \
anr.c \
bandpass.c \
calcc.c \
cblock.c \
channel.c \
compress.c \
delay.c \
div.c \
eer.c \
emph.c \
eq.c \
fcurve.c \
fir.c \
fmd.c \
fmmod.c \
fmsq.c \
gain.c \
gen.c \
iir.c \
iobuffs.c \
iqc.c \
linux_port.c \
main.c \
meter.c \
meterlog10.c \
nob.c \
nobII.c \
patchpanel.c \
resample.c \
RXA.c \
sender.c \
shift.c \
siphon.c \
slew.c \
staticpd.c \
TXA.c \
utilities.c \
wcpAGC.c \
wisdom.c

